--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         <div class="logo">ZF</div>
         <div>
           <div class="club">Zorfix</div>
-          <div class="tag">Hobbi Futbol Komandası</div>
+          <div class="tag">Məhəllə Futbol Komandası</div>
         </div>
       </div>
 
