--- a/index.html
+++ b/index.html
@@ -471,6 +471,13 @@
               <div class="m-meta">Doğum ili: 2012</div>
             </div>
           </article>
+<article class="member">
+  <div class="avatar">C-</div>
+  <div>
+    <div class="m-name">Camal (yaşca kiçik)</div>
+    <div class="m-meta">Doğum ili: 2013</div>
+  </div>
+</article>
 
           <article class="member">
             <div class="avatar">R</div>
