--- a/index.html
+++ b/index.html
@@ -502,15 +502,14 @@
       <div class="container">
         <div class="section-title">
           <h2>Turnir cədvəli</h2>
-          <div class="hint">Format: GF (qollar) • GD (fərq) • Pts (xal)</div>
         </div>
 
         <div class="table" role="table" aria-label="Turnir cədvəli">
           <div class="row head" role="row">
             <div role="columnheader">Komanda</div>
-            <div role="columnheader">GF</div>
-            <div role="columnheader">GD</div>
-            <div role="columnheader">Pts</div>
+            <div role="columnheader">Xal</div>
+            <div role="columnheader">Averaj</div>
+            <div role="columnheader">Oyun</div>
           </div>
 
           <div class="row" role="row">
