--- a/index.html
+++ b/index.html
@@ -514,16 +514,16 @@
 
           <div class="row" role="row">
             <div role="cell" data-label="Komanda"><span class="pos top">1</span> Yasamal United</div>
-            <div role="cell" data-label="GF">12</div>
-            <div role="cell" data-label="GD">39</div>
-            <div role="cell" data-label="Pts">8</div>
+            <div role="cell" data-label="Xal">12</div>
+            <div role="cell" data-label="Averaj">39</div>
+            <div role="cell" data-label="Oyun">8</div>
           </div>
 
           <div class="row" role="row">
             <div role="cell" data-label="Komanda"><span class="pos me">2</span> Zorfix</div>
-            <div role="cell" data-label="GF">9</div>
-            <div role="cell" data-label="GD">-39</div>
-            <div role="cell" data-label="Pts">8</div>
+            <div role="cell" data-label="Xal">9</div>
+            <div role="cell" data-label="Averaj">-39</div>
+            <div role="cell" data-label="Oyun">8</div>
           </div>
         </div>
       </div>
