--- a/index.html
+++ b/index.html
@@ -420,8 +420,8 @@
                 <div class="v">6</div>
               </div>
               <div class="stat">
-                <div class="k">Status</div>
-                <div class="v">Aktiv</div>
+                <div class="k">Bu sezon çempion olma ehtimalı</div>
+                <div class="v">20%</div>
               </div>
             </div>
           </div>
@@ -514,16 +514,16 @@
 
           <div class="row" role="row">
             <div role="cell" data-label="Komanda"><span class="pos top">1</span> Yasamal United</div>
-            <div role="cell" data-label="Xal">12</div>
-            <div role="cell" data-label="Averaj">39</div>
-            <div role="cell" data-label="Oyun">8</div>
+            <div role="cell" data-label="Xal">15</div>
+            <div role="cell" data-label="Averaj">40</div>
+            <div role="cell" data-label="Oyun">9</div>
           </div>
 
           <div class="row" role="row">
             <div role="cell" data-label="Komanda"><span class="pos me">2</span> Zorfix</div>
             <div role="cell" data-label="Xal">9</div>
-            <div role="cell" data-label="Averaj">-39</div>
-            <div role="cell" data-label="Oyun">8</div>
+            <div role="cell" data-label="Averaj">-40</div>
+            <div role="cell" data-label="Oyun">9</div>
           </div>
         </div>
       </div>
@@ -540,25 +540,25 @@
           <article class="card">
             <h3>Kapitan təsdiqləndi</h3>
             <p>Komandanın kapitanı olaraq Burhan təsdiqləndi. Yeni oyunlar üçün hazırlıq planı yeniləndi.</p>
-            <div class="date">Fevral 2026</div>
+            <div class="date">6 Fevral 2026</div>
           </article>
 
           <article class="card">
             <h3>Turnirdə mövqe</h3>
-            <p>Zorfix turnirdə 2-ci yerdədir. Növbəti oyun üçün komanda məşqləri davam edir.</p>
-            <div class="date">Fevral 2026</div>
+            <p>Mütləq qazanmalı oldugumuz oyunu uduzduq. Çempion olmaq üçün artıq daha ciddi oynamalıyıq!</p>
+            <div class="date">7 Fevral 2026</div>
           </article>
 
           <article class="card">
-            <h3>Məşq proqramı</h3>
-            <p>Baş məşqçi İsmayıllı Ömer həftəlik məşq proqramını təsdiqlədi və iştirak planı hazırlanır.</p>
-            <div class="date">Fevral 2026</div>
+            <h3>Son oyun haqqında</h3>
+            <p>Oynadıgımız son oyunu çox əla oynadıq amma müdafiədə və qapıda olan problemlər səbəbindən uduzduq!</p>
+            <div class="date">7 Fevral 2026</div>
           </article>
 
           <article class="card">
-            <h3>Heyət yeniləndi</h3>
-            <p>Heyət bölməsində oyunçuların siyahısı və doğum illəri dəqiqləşdirildi.</p>
-            <div class="date">Fevral 2026</div>
+            <h3>Zorfix Çempion olmaq üçün şansı varmı</h3>
+            <p>Son oyunu uduzmagımız nəticəsində Yasamal United xalını 15 edir. Çempion olmaq üçün şansımız çox ciddi azalıb</p>
+            <div class="date">7 Fevral 2026</div>
           </article>
         </div>
       </div>
